# SpikingLLM

./: .gitignore  README.md  ann2snn.py  calibration.py  calibration.sh  calibration_copy.py  calibration_copy.sh  eval.py  eval_snn.py  main.py  my_eval_snn.sh  my_run_symquant_llama2.sh  my_symquant_ann2snn.sh  phase_main.py  pyproject.toml  quant_utils.py  requirements.txt  result.txt  run_phase.sh  run_phase_grain.sh
GrainAnalysis/: fs_fit.py  granule_decoupled_fit.py  granule_fit.py  load_activation.py  phase_fit.py  phase_search.py  retrain.py  retrain_decoupled.py  retrain_decoupled_old.py  retrain_decoupled_softmax.py  search.bash  utils.py
GrainAnalysis/retrain_dir/Llama-2-13B-hf-T-10-grains-2-lr-0.0005/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-13B-hf-T-10-grains-3-lr-0.0005/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-13B-hf-T-10-grains-3-lr-0.0008/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-13B-hf-T-8-grains-2-lr-0.0005/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-13B-hf-T-8-grains-2-lr-0.0008/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-13B-hf-T-8-grains-3-lr-0.0005/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-13B-hf-T-8-grains-3-lr-0.0008/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-7B-hf-T-10-grains-1/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-7B-hf-T-10-grains-1-lr-9e-05/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-7B-hf-T-10-grains-2/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-7B-hf-T-10-grains-3/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-7B-hf-T-10-grains-3-lr-0.0002/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-7B-hf-T-8-grains-1/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-7B-hf-T-8-grains-2/: retrain.pth
GrainAnalysis/retrain_dir/Llama-2-7B-hf-T-8-grains-3/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-1/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-1-lr-0.0005/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-1-lr-0.0008/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-2/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-2-lr-0.0005/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-2-lr-0.0008/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-3/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-3-lr-0.0003/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-3-lr-0.0005/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-3-lr-3e-05/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-3-lr-5e-05/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-6-grains-3-lr-8e-05/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-8-grains-1/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-8-grains-2/: retrain.pth
GrainAnalysis/retrain_dir/Meta-Llama-3-8B-T-8-grains-3/: retrain.pth
SNN/: spike_layer.py  spike_neuron.py
ToDo/: todo.md
lzg/: layers.py  load_dataset.py
old_version/: draw.py  error.py  error.sh  error_cal.py  error_cal.sh  errorplot.py  nohup.out  run0.sh  run1.sh  run2.sh  run3.sh  run4.sh  run5.sh  run6.sh  run7.sh  run_eval.sh  snn2quant_ann.py  test_grad.py  test_nosym.py  test_sym.py  unevenness.py  unevenness.sh
phase/: phase_calibration.py  phase_layer.py  phase_neuron.py  phase_util.py
quantize/: block_ap.py  int_linear_fake.py  quantizer.py
run_scripts/: run_phase_ours_llama2.sh  run_phase_ours_llama3.sh
run_scripts/log/snn_ours_T_10/Llama-2-7B-hf/: log_rank0_1773395513.txt  log_rank0_1773396352.txt  log_rank0_1773408434.txt  log_rank0_1773409139.txt  log_rank0_1773409431.txt
utils/: block_calibration copy 2.py  block_calibration.py  block_calibration_copy.py  data_utils.py  model_utils.py  quant_utils.py  snn_utils.py  stat_utils.py  train_utils.py
