[project]
name = "spiking-ds"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
    "absl-py (==2.2.2)",
    "accelerate (==0.28.0)",
    "addict (==2.4.0)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.11.16)",
    "aiosignal (==1.3.2)",
    "antlr4-python3-runtime (==4.9.3)",
    "anyio (==4.9.0)",
    "asttokens (==3.0.0)",
    "async-timeout (==5.0.1)",
    "attrs (==25.3.0)",
    "backports-tarfile (==1.2.0)",
    "bitsandbytes (==0.41.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "chardet (==5.2.0)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "contourpy (==1.3.0)",
    "crashtest (==0.4.1)",
    "cryptography (==44.0.2)",
    "cycler (==0.12.1)",
    "dataproperty (==1.1.0)",
    "datasets (==2.18.0)",
    "decorator (==5.2.1)",
    "dill (==0.3.8)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.8)",
    "edit-distance (==1.0.6)",
    "evaluate (==0.4.3)",
    "exceptiongroup (==1.2.2)",
    "executing (==2.2.0)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "fonttools (==4.57.0)",
    "frozenlist (==1.6.0)",
    "fsspec (==2024.2.0)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.8)",
    "httpx (==0.28.1)",
    "huggingface-hub (==0.30.2)",
    "idna (==3.10)",
    "importlib-metadata (==8.6.1)",
    "importlib-resources (==6.5.2)",
    "installer (==0.7.0)",
    "ipython (==8.35.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jedi (==0.19.2)",
    "jeepney (==0.9.0)",
    "jinja2 (==3.1.6)",
    "joblib (==1.4.2)",
    "jsonlines (==4.0.0)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.7)",
    "lm-eval (==0.4.2)",
    "lxml (==5.3.2)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.9.4)",
    "matplotlib-inline (==0.1.7)",
    "mbstrdecoder (==1.1.4)",
    "modelscope (==1.25.0)",
    "more-itertools (==10.6.0)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.0)",
    "multidict (==6.4.3)",
    "multiprocess (==0.70.16)",
    "networkx (==3.2.1)",
    "ninja (==1.11.1.4)",
    "nltk (==3.9.1)",
    "numexpr (==2.10.2)",
    "numpy (==1.23.4)",
    "nvidia-cublas-cu12 (==12.4.5.8)",
    "nvidia-cuda-cupti-cu12 (==12.4.127)",
    "nvidia-cuda-nvrtc-cu12 (==12.4.127)",
    "nvidia-cuda-runtime-cu12 (==12.4.127)",
    "nvidia-cudnn-cu12 (==9.1.0.70)",
    "nvidia-cufft-cu12 (==11.2.1.3)",
    "nvidia-curand-cu12 (==10.3.5.147)",
    "nvidia-cusolver-cu12 (==11.6.1.9)",
    "nvidia-cusparse-cu12 (==12.3.1.170)",
    "nvidia-cusparselt-cu12 (==0.6.2)",
    "nvidia-nccl-cu12 (==2.21.5)",
    "nvidia-nvjitlink-cu12 (==12.4.127)",
    "nvidia-nvtx-cu12 (==12.4.127)",
    "omegaconf (==2.3.0)",
    "opencv-python (==4.11.0.86)",
    "packaging (==25.0)",
    "pandas (==2.2.3)",
    "parso (==0.8.4)",
    "pathvalidate (==3.2.3)",
    "pbs-installer (==2025.4.9)",
    "peft (==0.8.2)",
    "pexpect (==4.9.0)",
    "pillow (==11.2.1)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.7)",
    "poetry (==2.1.2)",
    "poetry-core (==2.1.2)",
    "portalocker (==3.1.1)",
    "prompt-toolkit (==3.0.51)",
    "propcache (==0.3.1)",
    "protobuf (==6.30.2)",
    "psutil (==7.0.0)",
    "ptyprocess (==0.7.0)",
    "pure-eval (==0.2.3)",
    "pyarrow (==19.0.1)",
    "pyarrow-hotfix (==0.6)",
    "pybind11 (==2.13.6)",
    "pycocotools (==2.0.8)",
    "pycountry (==24.6.1)",
    "pycparser (==2.22)",
    "pygments (==2.19.1)",
    "pyparsing (==3.2.3)",
    "pyproject-hooks (==1.2.0)",
    "pytablewriter (==1.2.1)",
    "python-dateutil (==2.9.0.post0)",
    "pytorch-ignite (==0.5.2)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.2)",
    "rapidfuzz (==3.13.0)",
    "regex (==2024.11.6)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "responses (==0.18.0)",
    "rouge (==1.0.1)",
    "rouge-score (==0.1.2)",
    "sacrebleu (==2.5.1)",
    "safetensors (==0.5.3)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.13.1)",
    "secretstorage (==3.3.3)",
    "sentencepiece (==0.2.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlitedict (==2.1.0)",
    "stack-data (==0.6.3)",
    "sympy (==1.13.1)",
    "tabledata (==1.3.4)",
    "tabulate (==0.9.0)",
    "tcolorpy (==0.1.7)",
    "termcolor (==3.0.1)",
    "threadpoolctl (==3.6.0)",
    "tokenizers (==0.19.1)",
    "tomli (==2.2.1)",
    "tomlkit (==0.13.2)",
    "torch (==2.6.0)",
    "torchaudio (==2.6.0)",
    "torchvision (==0.21.0)",
    "tqdm (==4.64.1)",
    "tqdm-multiprocess (==0.0.11)",
    "traitlets (==5.14.3)",
    "transformers (==4.40.0)",
    "triton (==3.2.0)",
    "trove-classifiers (==2025.4.11.15)",
    "typepy (==1.3.4)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "urllib3 (==2.4.0)",
    "virtualenv (==20.30.0)",
    "wcwidth (==0.2.13)",
    "word2number (==1.1)",
    "xxhash (==3.5.0)",
    "yarl (==1.20.0)",
    "zipp (==3.21.0)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
